fixed image proportions on smaller screens and made some tweaks to the UX of the play with audio link

--- a/src/sass/site/pages/_front-page.scss
+++ b/src/sass/site/pages/_front-page.scss
@@ -16,6 +16,7 @@
 		}
 
 		&__play-audio {
+			@extend %max-width--padded;
 			font-weight: $font-weight__bold;
 		}
 	}
